Redesign menus page

--- a/resources/css/customer-layout.css
+++ b/resources/css/customer-layout.css
@@ -2,8 +2,20 @@
     padding: 0 2rem 2rem;
 }
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 2rem;
+}
+
 @media (min-width: 768px) {
     .page {
         padding: 0 4rem 4rem;
+    }
+
+    .footer {
+        padding: 0 0 4rem;
     }
 }
