--- a/resources/css/menus.css
+++ b/resources/css/menus.css
@@ -1,15 +1,141 @@
-.menu-category-list {
+.main {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1.5rem;
 }
 
-.menu-list {
+.menus-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.form-field {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
 }
 
-.menu-image {
+.form-field-row {
+    display: flex;
+    gap: 1rem;
+}
+
+.text-field {
+    width: 100%;
+    border: 0;
+    border-radius: 1rem;
+    box-shadow: 0 0 0 0.0625rem #8F99A1 inset;
+    padding: 0.75rem 1rem;
+    font-family: 'Outfit', sans-serif;
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+
+.text-field:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.0625rem #00B700 inset;
+}
+
+.text-field::placeholder {
+    color: #8F99A1;
+}
+
+.filters {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.filter.selected {
+    background-color: #D8FFD7;
+}
+
+.filter-check-icon {
+    display: none;
+}
+
+.filter.selected .filter-check-icon {
+    display: inline;
+}
+
+.menus-category {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.menus-category-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.menus-category-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.menus-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.menus-item-top {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.menus-item-image {
+    width: 100%;
+    aspect-ratio: 1 / 1;
     object-fit: cover;
+    border-radius: 2rem;
+}
+
+.menus-item-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.menus-item-add-form {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 576px) {
+    .menus-category-list {
+        grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+    }
+}
+
+@media (min-width: 768px) {
+    .main {
+        gap: 2rem;
+    }
+
+    .menus-title {
+        font-size: 2.5rem;
+    }
+
+    .form-field {
+        max-width: 25rem;
+    }
+
+    .menus-category {
+        gap: 2rem;
+    }
+
+    .menus-category-title {
+        font-size: 2rem;
+    }
+
+    .menus-category-list {
+        gap: 2rem;
+    }
 }
