--- a/resources/css/cart.css
+++ b/resources/css/cart.css
@@ -1,13 +1,97 @@
 .main {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 2rem;
 }
 
 .cart-title {
     font-family: 'Playfair Display', serif;
     font-size: 2rem;
     font-weight: 600;
+}
+
+.mobile-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.mobile-menu-list-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.menu-image {
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
+.menu-detail {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.menu-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.menu-quantity {
+    display: flex;
+    border-radius: 9999px;
+    box-shadow: 0 0 0 0.0625rem #8F99A1 inset;
+}
+
+.menu-quantity-decrement-form {
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-quantity-decrement-button {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: center;
+}
+
+.menu-quantity-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    box-shadow: 0.0625rem 0 0 #8F99A1 inset, -0.0625rem 0 0 #8F99A1 inset;
+}
+
+.menu-quantity-increment-form {
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-quantity-increment-button {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: center;
 }
 
 .cart-empty {
@@ -25,11 +109,20 @@
     color: #0A5D0C;
 }
 
-@media (min-width: 768px) {
-    .main {
-        gap: 2rem;
-    }
+.total-price {
+    display: flex;
+    justify-content: space-between;
+}
 
+.total-price-title {
+    font-weight: 600;
+}
+
+.total-price-text {
+    font-weight: 600;
+}
+
+@media (min-width: 768px) {
     .cart-title {
         font-size: 2.5rem;
     }
