--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -50,7 +50,7 @@
     gap: 1rem;
 }
 
-.advantages-item {
+.advantage-item {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -58,14 +58,14 @@
     gap: 1rem;
 }
 
-.advantages-item-title {
+.advantage-item-title {
     text-align: center;
     font-family: 'Playfair Display', sans-serif;
     font-size: 1.5rem;
     font-weight: 600;
 }
 
-.advantages-item-text {
+.advantage-item-text {
     text-align: center;
 }
 
@@ -90,7 +90,7 @@
     gap: 1rem;
 }
 
-.menus-item {
+.menu-item {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -98,7 +98,7 @@
     gap: 1rem;
 }
 
-.menus-item-image {
+.menu-item-image {
     width: 100%;
     max-width: 20rem;
     aspect-ratio: 1 / 1;
@@ -106,14 +106,14 @@
     border-radius: 2rem;
 }
 
-.menus-item-title {
+.menu-item-title {
     text-align: center;
     font-family: 'Playfair Display', sans-serif;
     font-size: 1.5rem;
     font-weight: 600;
 }
 
-.menus-item-text {
+.menu-item-text {
     text-align: center;
 }
 
@@ -138,7 +138,7 @@
     gap: 1rem;
 }
 
-.reviews-item {
+.review-item {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -146,19 +146,19 @@
     gap: 1rem;
 }
 
-.reviews-item-image {
+.review-item-image {
     object-fit: cover;
     border-radius: 9999px;
 }
 
-.reviews-item-title {
+.review-item-title {
     text-align: center;
     font-family: 'Playfair Display', sans-serif;
     font-size: 1.5rem;
     font-weight: 600;
 }
 
-.reviews-item-text {
+.review-item-text {
     text-align: center;
 }
 
