Redesign order page

--- a/resources/css/order.css
+++ b/resources/css/order.css
@@ -1,7 +1,137 @@
-.table-header {
-    border: 0.0625rem solid #3D3D3D;
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-.table-data {
-    border: 0.0625rem solid #3D3D3D;
+.order-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    font-weight: 600;
 }
+
+.order-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: #D8FFD7;
+}
+
+.order-info-text {
+    color: #0A5D0C;
+    text-align: center;
+}
+
+.order-detail-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.order-detail {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.order-detail-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.order-detail-text:last-child {
+    text-align: end;
+}
+
+.order-detail-text-primary {
+    color: #00B700;
+}
+
+.order-detail-text-warning {
+    color: #FF7433;
+}
+
+.order-detail-text-danger {
+    color: #FF0900;
+}
+
+.order-menus-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.order-menus-list {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.order-menu-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.order-menu-item-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.order-menu-item-title {
+    font-weight: 600;
+}
+
+.order-menu-item-text:last-child {
+    text-align: end;
+}
+
+.order-menus-total-price {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.order-menus-total-price-text {
+    font-weight: 600;
+}
+
+.order-menus-total-price-text:last-child {
+    text-align: end;
+}
+
+@media (min-width: 768px) {
+    .order-title {
+        font-size: 2.5rem;
+    }
+
+    .order-detail-title {
+        font-size: 2.5rem;
+    }
+
+    .order-menus-title {
+        font-size: 2.5rem;
+    }
+
+    .order-info {
+        padding: 4rem;
+    }
+
+    .order-detail {
+        max-width: 33.75rem;
+    }
+
+    .order-menus-list {
+        max-width: 33.75rem;
+    }
+}
+
