--- a/resources/css/admin-sidebar.css
+++ b/resources/css/admin-sidebar.css
@@ -1,8 +1,11 @@
 .mobile-header {
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
+    background-color: white;
 }
 
 .sidebar-action {
